olympus/openwebui/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  namespace: olympus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ai.ramoneees.com`)
      kind: Rule
      services:
        - name: openwebui
          port: 8080
  tls:
    secretName: wildcard-ramoneees-com-tls
